--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --aicon-blue: #0057A0;
+  --aicon-orange: #FFA500;
+  --aicon-green: #28A745;
+  --aicon-white: #FFFFFF;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar-custom {
+  background-color: var(--aicon-blue);
+}
+
+.btn-orange {
+  background-color: var(--aicon-orange);
+  color: white;
+  border: none;
+}
+
+.btn-orange:hover {
+  background-color: #e69500;
 }
